# BOM_APP

./: README.md  Start_test.py  app.py  build.bat  build.spec  color  main.py  phase1_results.txt  probe_zgpos.py  pyproject.toml  requirements.txt  requirements_app.txt
.claude/: launch.json  settings.local.json
ML/: ML_Test.py
Test_setup_data/: db_map.txt  phase1_results.txt
database/: sync_to_local.py  xal_local.db
db/: bom_exporter.py  bom_loader.py  connection.py  parts_collector.py  schema_loader.py  search_loader.py  stock_loader.py  table_loader.py
miscellaneous/: BOM_7943495.00.json
miscellaneous/ML/: run_llm.py
miscellaneous/database/: sync_to_local.py
miscellaneous/tests/: step1_big_picture.py  step3_dataset_column.py  step5_sample_data.py  step7_document.py  step8_scriptnum_similarity.py  step9_stocksum_discovery.py
tests/: db_connection.py  db_map.txt  run_phase1.py  step2_prefix_groups.py  step4_key_table_columns.py  step6_foreign_keys.py  test_article_7959743.py  test_drawing_in_pdf.py  test_stock_query.py
ui/: bom_panel.py  data_panel.py  detail_panel.py  main_window.py  parts_panel.py  search_panel.py  stock_panel.py  tree_panel.py
