[tool.poetry]
name = "bom-app"
version = "0.1.0"
description = "BOM Explorer + LLM"
authors = []

[tool.poetry.dependencies]
python = "^3.11"
PyQt6 = "^6.10.2"
pyodbc = "^5.3.0"
transformers = "^5.2.0"
accelerate = "^1.12.0"
bitsandbytes = "^0.49.2"
huggingface-hub = "^1.5.0"
sentencepiece = "^0.2.0"
protobuf = "^7.0.0"
safetensors = "^0.7.0"
numpy = "^2.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry-core.masonry.api"
